--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ section {
 .main-btn {
     color: black;
     text-decoration: none;
-    background: white;
+    background: whitesmoke;
     padding: 0.9375em 2.1875em;
     border-radius: 15px;
     letter-spacing: 1px;
@@ -87,15 +87,65 @@ section {
     display: inline-block;
     margin-bottom: 40px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    transition: 0.4s ease;
 }
 
 .main-btn:hover {
     background-color: rgb(230, 230, 230);
     transform: scale(1.1);
-    transition: 0.4s ease;
 }
 
 .social a {
-    padding: 10px;
+    font-size: 1.7em;
+    padding-right: 60px;
     color: #fff;
+}
+
+.social a:hover {
+    color: rgb(230, 230, 230);
+}
+
+.title {
+    color: black;
+    text-align: center;
+    font-size: 2.2em;
+    margin-bottom: 30px;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.card {
+    background: #fff;
+    width: 21.25em;
+    margin: 15px;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3);
+    transition: 0.4s ease;
+}
+
+.card:hover {
+    transform: scale(1.1);
+}
+
+.icon {
+    color: black;
+    text-align: center;
+    font-size: 8em;
+}
+
+.info {
+    text-align: center;
+}
+
+.info h3 {
+    color: black;
+    font-size: 1.2em;
+    font-weight: 700;
+    margin: 10px;
 }
