--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,36 @@ section {
     font-weight: 700;
     margin: 10px;
 }
+
+.Projects {
+    background-image: radial-gradient(whitesmoke, darkgray);
+
+}
+
+.Projects .content {
+    margin-top: 30px;
+}
+
+.projCard {
+    border: 1px solid white;
+    background-color: #fff;
+    min-height: 14em;
+    width: 23em;
+    overflow: hidden;
+    border-radius: 10px;
+    margin: 20px;
+    transition: 0.4s ease;
+}
+
+.projCard:hover {
+    transform: scale(1.1);
+}
+
+.projCard:hover .projVideo {
+    opacity: 0.9;
+}
+
+.projVideo iframe {
+    width: 100%;
+    height: 13em;
+}
