--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ section {
 }
 
 .projCard {
-    border: 1px solid white;
+    border: 2px solid white;
     background-color: #fff;
     min-height: 14em;
     width: 23em;
@@ -181,4 +181,92 @@ section {
 .projVideo iframe {
     width: 100%;
     height: 13em;
+}
+
+.projinfo {
+    padding: 1em;
+}
+
+.projectcat {
+    font-size: 0.8em;
+}
+
+.vidtitle {
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-weight: 800;
+}
+
+.more {
+    text-decoration: none;
+    color: darkgray;
+}
+
+.more:hover {
+    color: black;
+}
+
+.cards-contact .icon {
+    font-size: 4.5em;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: whitesmoke;
+}
+
+footer span {
+    font-size: 1.2em;
+    font-weight: 800;
+    color: rgb(0, 195, 255);
+    text-transform: uppercase;
+}
+
+.footer-social a {
+    color: darkgray;
+    padding-left: 20px;
+}
+
+.footer-social a:hover {
+    color: black;
+}
+
+@media (max-width:1023px) {
+    header {
+        padding: 12px 20px;
+    }
+
+    .navig a {
+        padding-left: 10px;
+    }
+    
+    .title {
+        font-size: 1.8em;
+    }
+
+    section {
+        padding: 80px 40px;
+    }
+
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width:641px){
+    body{
+        font-size: 12px;
+    }
+}
+
+@media (max-width:300px){
+    body{
+        font-size: 10px;
+     
+    }
 }
